# object-detection

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  download_models.sh  objdet.cpp  opencv_dnn.cpp
mpi/: CMakeLists.txt  demo_mpi.cpp  hello_mpi.cpp  objdet_mpi.cpp
openmp/: CMakeLists.txt  objdet_openmp.cpp
src/: CMakeLists.txt  dnn_algorithmI.h  download_models.sh  googlenet.cpp  googlenet.h  imgreader.cpp  imgreader.h  load_modules.levque.sh  load_modules.sh  objdet.cpp  opencv_dnn.cpp  selective.cpp  ssd.cpp  test_imreader.cpp
utils/: CMakeLists.txt  utils.cpp  utils.h
